--- a/stile.css
+++ b/stile.css
@@ -1,13 +1,24 @@
+@font-face{
+  font-family:asterone;
+  src: url(../src/fonts/Bisect.otf);
+}
+
+@font-face {
+  font-family: titoli;
+  src: url(../src/fonts/Asterone\ DEMO.ttf);
+}
+
 *{
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;}
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;}
+
 
 body{
-    margin: 0;
-    background-color: rgb(21, 18, 42);
-    height: 100%;
-    position: relative;
-    
+  margin: 0;
+  background-color: #15122a;
+  height: 100%;
+  position: relative;
+  -webkit-font-smoothing: antialiased;
 }
 
 main{
@@ -15,27 +26,99 @@ main{
 }
 
 .wrapper{
-    width: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+/*#region header*/
+
+header a{
+  margin: 0 auto;
+  display: block;
+  width: fit-content;
 }
 
 header img{
-    margin: 10px 0 10px 20px;
-    height: 75px;
+  margin: 0;
+  margin-top: 10px;
+  height: 190px;
+  transition: 0.5s;
 }
 
-header hr{
-    margin-left: 10px;
-    margin-right: 10px;
+header img:hover{
+  transition: 0.5s;
+  transform: rotate(-5deg);
 }
+
+header p{
+  float: right;
+  margin-top: 58px;
+  margin-right: 25px;
+  transform: translateY(-50%);
+}
+
+#bottone-animato {
+  background: linear-gradient(168deg, rgba(243,115,59,1) 0%, rgba(228,46,92,1) 40%, rgba(0,0,0,1) 83%);
+  background-size: 200% 100%;
+	border-radius: 50%;
+  border: none;
+  box-shadow:none;
+  cursor: pointer;
+  font-size: 24px;
+	font-weight: 500;
+  line-height: 24px;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none;
+  transition: 0.2s;
+  width: 50px;
+  height: 50px;
+} 
+
+#bottone-animato i{
+  margin-top: 0;
+  color: #15122a;
+}
+
+#bottone-animato svg{
+    left: -55px;
+    opacity: 0.5;
+    position: absolute;
+    top: -2px;
+    transition: 0.5s cubic-bezier(.5,-0.5,.5,1.5);
+}
+  
+#bottone-animato:hover svg {
+    opacity: 0.9;
+    transform: translateX(50px) scale(1.5);
+  }
+  
+#bottone-animato:hover {
+  transform: rotate(-3deg);
+}
+
+#bottone-animato:hover i{
+  color: #d0cee2;
+  transition: 0.3s;
+}
+
+#bottone-animato:active {
+    transform: scale(0.95) rotate(-3deg);
+  }
+
+
+/*#endregion header*/
+
+/*#region container copertine, copertine e bottone*/
 
 h2{
   margin: 0;
   padding-left: 20px;
-  padding-top: 25px;
   color: whitesmoke;
-  font-weight: 300;
+  font-family: asterone;
+  font-size: 22px;
+  text-shadow:  1px 1px 6px rgb(66, 2, 131),0px 0px 13px rgb(255, 93, 18);
 }
 
 .containers{
@@ -46,6 +129,7 @@ h2{
 
 .dettagli h3{
   margin-top: 0;
+  font-family: titoli;
 }
 
 .dettagli button{
@@ -60,32 +144,25 @@ h2{
   font-size: 1vmin;
 }
 
+.grid .dettagli p{
+  height: 80px;
+  font-size: 1vmin;
+}
+
 .titolini h2{
-float: left;
-width: 50%;
-margin-bottom: 35px;
+  text-align: center;
+  float: left;
+  width: 50%;
+  margin-bottom: 35px;
+  padding-left: 0;
+  font-size: 18px;
 }
 
 .titolini{
-overflow: hidden;
+  margin-top: 40px;
+  overflow: hidden;
 }
 
-header p{
-    color: white;
-    float: right;
-    border: 2px solid rgb(255, 255, 255);
-    padding: 5px 25px;
-    margin-top: 54px;
-    margin-right: 20px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-header p:hover{
-    background-color: rgba(255, 228, 196, 0.075);
-}
 
 .grid .top{
   width: 100%;
@@ -117,7 +194,6 @@ header p:hover{
   height: 420px;
 }
 
-
 .film-item {
   position: absolute;
   height: 100%;
@@ -125,6 +201,96 @@ header p:hover{
   background-size: cover;
   background-position: center;
 }
+
+.container:hover .dettagli {
+  transform: translate(0);
+}
+
+.container:hover{
+    scale: 1.1;
+    transition: 0.4s;
+}
+
+.container .dettagli {
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  padding: 10px;
+  height: 400px;
+  font-size: 10px;
+  text-align: center;
+  background: #000000c4;
+  color: #fff;
+  transform: translate(0, 240px);
+  transition: all 0.5s ease;
+  cursor: default;
+}
+
+.top{
+  flex-wrap: wrap;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 9px 1fr ;
+  justify-items: center;
+  align-items: center;
+}
+
+.linea{
+  width: 1px;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.671);
+  grid-row: 1;
+  grid-column: 2 / 3;
+  margin-bottom: 10px;
+}
+
+#entrata{
+    display: none;
+}
+
+.containers input{
+  display: block;
+  margin: 10px auto 0;
+  width: 55px;
+}
+
+
+button {
+  background-color: cornflowerblue;
+  padding: 8px;
+  box-shadow: 0 0 0.5em cornflowerblue;
+  border-radius: 0.3em;
+  width: 10em;
+  border: 1px solid #ccc;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 30px auto 20px;
+  display: block;
+}
+
+button:hover{
+  scale: 1.1;
+  transition:0.5s;
+}
+
+#button{
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  text-align: center;
+  border-radius: 50%;
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: 300px;
+  transform: translate(-50%,-50%);
+}
+
+/*#endregion container copertine, copertine e bottone*/
+
+/*#region url immagini copertine*/
 
 #imm1 {
   background-image: url(../src/film/avengers-endgame.jpg);
@@ -198,104 +364,19 @@ header p:hover{
 #imm24 {
   background-image: url(../src/film/the-boys.jpg);
 }
-.container:hover .dettagli {
-  transform: translate(0);
-}
 
-.container:hover{
-    scale: 1.1;
-    transition: 0.4s;
-}
-
-
-.container .dettagli {
-  position: absolute;
-  left: 0px;
-  top: 50%;
-  padding: 10px;
-  height: 400px;
-  font-size: 10px;
-  text-align: center;
-  background: #000000c4;
-  color: #fff;
-  transform: translate(0, 240px);
-  transition: all 0.5s ease;
-  cursor: default;
-}
-
-.top{
-  flex-wrap: wrap;
-}
-
-.grid{
-  display: grid;
-  grid-template-columns: 1fr 9px 1fr ;
-  justify-items: center;
-  align-items: center;
-}
-
-.linea{
-  width: 1px;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.671);
-  grid-row: 1;
-  grid-column: 2 / 3;
-  margin-bottom: 10px;
-}
-
-
-#entrata{
-    display: none;
-}
+/*#endregion url immagini copertine*/
 
 .opaco{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.678);
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
-.containers input{
-  display: block;
-  margin: 10px auto 0;
-  width: 55px;
-}
-
-
-button {
-  background-color: cornflowerblue;
-  padding: 8px;
-  box-shadow: 0 0 0.5em cornflowerblue;
-  border-radius: 0.3em;
-  width: 10em;
-  border: 1px solid #ccc;
-  font-weight: bold;
-  cursor: pointer;
-  margin: 30px auto 20px;
-  display: block;
-}
-
-button:hover{
-  scale: 1.1;
-  transition:0.5s;
-}
-
-#button{
-  width: 30px;
-  height: 30px;
-  background-color: red;
-  text-align: center;
-  border-radius: 50%;
-  display: none;
   position: absolute;
-  left: 50%;
-  top: 300px;
-  transform: translate(-50%,-50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.678);
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 /*#region Form */
@@ -310,13 +391,12 @@ button:hover{
   }
   
   input[type="text"] {
-    padding: 15px 20px;
-    text-align: center;
+    padding: 15px 20px 15px 5px;
     display: block;
     margin: 0 auto;
     width: 200px;
     height: 20px;
-    font-size: 15px;
+    font-size: 12px;
   }
   
   #inserisci-email{
@@ -519,6 +599,10 @@ form a:hover{
   width: fit-content;
 }
 
+.my-card-title h3{
+  font-family: titoli;
+}
+
 .my-card-text {
   font-size: 14px;
   margin-bottom: 10px;
@@ -569,6 +653,9 @@ footer p{
   padding-top: 35px;
 }
 
+footer span{
+  font-weight: bold;
+}
 
 footer a{
   margin:10px;
@@ -584,12 +671,14 @@ footer a{
    background-color: rgb(21, 18, 42);
    right: 30px;
    bottom: 30px;
-   border: 3px solid #d63e07;
+   border-color: rgba(243, 39, 39, 0.849);
+   border-width: 3px;
+   border-style: solid;
    border-radius: 50%;
    cursor: pointer;
    text-align: center;
    font-size: 12px;
-   transition: 1s;
+   transition: 0.5s;
    color: white;
    box-shadow: 0 0 10px #0d0c18;
 }
@@ -602,6 +691,7 @@ footer a{
 
 #contatti:hover{
   scale: 1.3;
+  transform: rotate(-3deg);
 }
 
 #modulo{
@@ -616,7 +706,6 @@ footer a{
   top: 100px;
   transform: translate(2800px,0);
   transition: all 0.8s ease;
-  display: none;
 }
 
 #modulo form h2{
@@ -703,7 +792,6 @@ label[for="commento"]{
 #email-contatti,
 #telefono{
   width: 350px;
-  text-align: center;
   height: 30px;
 }
 
@@ -717,33 +805,6 @@ label[for="accetto-contatti"]{
 
 
 /*#endregion modulo-contatti*/
-
-.ordine{
-  order: 1;
-  flex: none;
-  width: 100%;
-}
-
-.ordine h5{
-  margin: 0;
-  font-size: 25px;
-}
-
-.ordine p{
-  margin: 0;
-  margin-bottom: 5px;
-}
-
-.ordine button{
-  margin: 0;
-}
-
-.ordine .bottoni{
-  text-align: center;
-  height: fit-content;
-  margin-bottom: 15px;
-  margin-top: 15px;
-}
 
 /*#region SerieTv*/
 .episodi{
@@ -858,6 +919,7 @@ select {
 option {
   background-color: #868096;
 }
+
 select:focus {
   outline: none;
 }
@@ -866,7 +928,32 @@ select::-ms-expand {
   display: none;
 }
 
+.ordine{
+  order: 1;
+  flex: none;
+  width: 100%;
+}
 
+.ordine h5{
+  margin: 0;
+  font-size: 25px;
+}
+
+.ordine p{
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.ordine button{
+  margin: 0;
+}
+
+.ordine .bottoni{
+  text-align: center;
+  height: fit-content;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
 
 /*#endregion SerieTv*/
 
